--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main>
+      <section id="todayInfo"></section>
+      <section id="weatherToogler">
+        <article class="selected">
+          <p><span class="light">dom</span></p>
+          <p>
+            <big><span class="light">22º</span></big> /
+            <small><span class="dark">17º</span></small>
+          </p>
+        </article>
+        <article>
+          <p><span class="light">dom</span></p>
+          <p>
+            <big><span class="light">22º</span></big> /
+            <small><span class="dark">17º</span></small>
+          </p>
+        </article>
+        <article>
+          <p><span class="light">dom</span></p>
+          <p>
+            <big><span class="light">22º</span></big> /
+            <small><span class="dark">17º</span></small>
+          </p>
+        </article>
+        <article>
+          <p><span class="light">dom</span></p>
+          <p>
+            <big><span class="light">22º</span></big> /
+            <small><span class="dark">17º</span></small>
+          </p>
+        </article>
+        <article>
+          <p><span class="light">dom</span></p>
+          <p>
+            <big><span class="light">22º</span></big> /
+            <small><span class="dark">17º</span></small>
+          </p>
+        </article>
+      </section>
+    </main>
+  </body>
 </html>
