Weather details section added

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
   <body>
     <header></header>
     <main>
-      <section id="todayInfo"></section>
+      <section id="todayInfo">
+        <section id="details"></section>
+        <section id="graps"></section>
+      </section>
       <section id="weatherToogler"></section>
     </main>
   </body>
