Temperature weather added using chart.js

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
     <main>
       <section id="todayInfo">
         <section id="details"></section>
-        <section id="graps"></section>
+        <section id="graps">
+          <canvas id="chart"></canvas>
+        </section>
       </section>
       <section id="weatherToogler"></section>
     </main>
