Temperature toggling added

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,12 @@
     <title>Weather App</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div id="tempToggle">
+        <button class="tempBtn celsius selected">C</button>
+        <button class="tempBtn fahrenheit">F</button>
+      </div>
+    </header>
     <main>
       <section id="todayInfo">
         <section id="details"></section>
