--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
         <button class="tempBtn celsius selected">C</button>
         <button class="tempBtn fahrenheit">F</button>
       </div>
+      <form action="#">
+        <input type="text" placeholder="Search" />
+      </form>
     </header>
     <main>
       <section id="todayInfo">
