--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://cdn.iconscout.com/icon/free/png-512/free-cloudy-224-907918.png?f=avif&w=256"
+    />
     <title>Weather App</title>
   </head>
   <body>
