Chnaged input placeholder

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <button class="tempBtn fahrenheit">F</button>
       </div>
       <form action="#">
-        <input type="text" placeholder="Search" />
+        <input type="text" placeholder="Search city" />
       </form>
     </header>
     <main>
